# advanced-programming-in-C-

./: .gitignore  README.md
BigInteger/: .clang-format  .gitignore  BigInt.cpp  BigInt.h  CMakeLists.txt  README.md  bigInt.cpp  bigInt.hpp  main.cpp
BigInteger/examples/: CMakeLists.txt  main.cpp
BigInteger/include/: bigInt.hpp
BigInteger/src/: bigInt.cpp
BigInteger/test/: BigIntTest.cpp  CMakeLists.txt  main.cpp
cplusplus-lessons/Inheritance/: Inheritance.cpp  a.out  constructor_order.cpp  inaccesible_base_class.cpp  multiple_cast.cpp  multiple_inheritance.cpp  visibility.cpp
cplusplus-lessons/OOP/: OOP-Function-call-overloading-comparators.cpp  OOP-Initializer_list.cpp  OOP-arithmetic-operators-overloading.cpp  OOP-basics-classes-and-structure.cpp  OOP-constant-metods.cpp  OOP-constructors-and-destructors.cpp  OOP-constructors-destructors-simple-string.cpp  OOP-local-inner-class.cpp  OOP-operators-overloading_The-rule-of-Three.cpp  OOP-pointer-to-members.cpp  OOP-static-fields-and-methotds.cpp  OOP-stream_in_out_put_overloading.cpp  OOP-type-conversion-overloading-and-explicit-keyword.cpp
cplusplus-lessons/cast/: C-style-cast.cpp  a.out  const-cast.cpp  reinterpret-cast.cpp  static-cast.cpp
cplusplus-lessons/inheritance/: Inheritance.cpp  constructor_order.cpp  derived_cast.cpp  diamond_problem_and_ambigious_cast.cpp  inaccesible_base_class.cpp  multiple_cast.cpp  virtual_inheritance.cpp
